@@ -53,8 +53,8 @@ class ATL_NO_VTABLE CUnitPort :
 	public IDispatchImpl<ECapeUnknown, &__uuidof(ECapeUnknown), &LIBID_CAPEOPEN100, /* wMajor = */ 1>,
 	public IDispatchImpl<ECapeUser, &__uuidof(ECapeUser), &LIBID_CAPEOPEN100, /* wMajor = */ 1>,
 	public IDispatchImpl<ICapeIdentification, &__uuidof(ICapeIdentification), &LIBID_CAPEOPEN100, /* wMajor = */ 1>,
-	public IDispatchImpl<ICapeUnitPort, &__uuidof(ICapeUnitPort), &LIBID_CAPEOPEN100, /* wMajor = */ 1>
-	public IDispatchImpl<IUnitPortEx, &__uuidof(IUnitPortEx), &LIBID_A2FLib, /* wMajor = */ 1, /* wMinor = */ 0>
+	public IDispatchImpl<ICapeUnitPort, &__uuidof(ICapeUnitPort), &LIBID_CAPEOPEN100, /* wMajor = */ 1>,
+	public IDispatchImpl<IUnitPortEx, &__uuidof(IUnitPortEx)>
 {
 public:
 	CUnitPort();
@@ -124,7 +124,7 @@ public:
 	/// ICapeUnitPort Methods
 	STDMETHOD(Disconnect)();
 	/// ICapeUnitPort Methods - own extension
-	STDMETHOD(put_direction)(CapePortDirection portDirection);
+	STDMETHOD(put_direction)(int portDirection);
 
 private:
 	/// name of te component passed by PME
@@ -134,17 +134,15 @@ private:
 	/// direction of the port
 	/**
 	* \details Define direction of the port. 
-	 * \li CAPE_INLET - default
-	 * \li CAPE_OUTLET
-	 * \li CAPE_INLET_OUTLET - should not be used
-	 * 
-	 * \see CO_Unit_Operations_v6.25.pdf pp. 280
-	 */
+	* \li CAPE_INLET - default
+	* \li CAPE_OUTLET
+	* \li CAPE_INLET_OUTLET - should not be used
+	* 
+	* \see CO_Unit_Operations_v6.25.pdf pp. 280
+	*/
 	CapePortDirection portDirection;
 
-	// IUnitPortEx Methods
 public:
-	STDMETHOD(set_PortType)(int portType);
 };
 
 OBJECT_ENTRY_AUTO(__uuidof(UnitPort), CUnitPort)
