@@ -10,20 +10,20 @@
 #ifndef VERSIONNO__H
 #define VERSIONNO__H
 
-#define VERSION_FULL           0.3.262.158
+#define VERSION_FULL           0.4.262.181
 
 #define VERSION_BASEYEAR       2013
 #define VERSION_DATE           "2013-09-20"
-#define VERSION_TIME           "09:35:57"
+#define VERSION_TIME           "10:36:19"
 
 #define VERSION_MAJOR          0
-#define VERSION_MINOR          3
+#define VERSION_MINOR          4
 #define VERSION_BUILDNO        262
-#define VERSION_EXTEND         158
+#define VERSION_EXTEND         181
 
-#define VERSION_FILE           0,3,262,158
-#define VERSION_PRODUCT        0,3,262,158
-#define VERSION_FILESTR        "0,3,262,158"
-#define VERSION_PRODUCTSTR     "0,3,262,158"
+#define VERSION_FILE           0,4,262,181
+#define VERSION_PRODUCT        0,4,262,181
+#define VERSION_FILESTR        "0,4,262,181"
+#define VERSION_PRODUCTSTR     "0,4,262,181"
 
 #endif
